[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
ark-bls12-381 = "0.5"
ark-ec         = "0.5"
ark-ff         = "0.5"
ark-serialize  = "0.5"
ark-std        = { version = "0.5", features = ["std", "getrandom"] }
sha2           = "0.10"
rand           = "0.8"
hex            = "0.4"
